# SBM_Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Erdos_Renyi_Illustration.eps  Erdos_Renyi_Illustration_10_1.0.eps  Erdos_Renyi_Illustration_40_0.3.eps  Network_Analysis.py  Network_Analysis_ipy.ipynb  Plot_Degree.ipynb  Pymc_Network.py  Quantile_FROLS.py  README.md  gdb_sudo.sh  git_token.txt  launch-vtune.sh  main.cpp  network.eps  network.fdb_latexmk  network.fls  network.tex  packages.yaml  reg_ex.ipynb  sbm_simulation.def  test.csv
Binders/: CMakeLists.txt  SBM_Binder.cpp  SIR_SBM.cpp  SIR_SBM_gt.hpp  graph_tool_SIR_SBM.cpp
Cpp/: .gdbinit  .gitignore  0.csvparam.csv  CMakeLists.txt  Eigen_FROLS.cpp  FROLS_feature.hpp  FROLS_math.hpp  SIR.sh  SIS.sh  config.sh  debug_toolchain.cmake  ex.cpp  hip_config.sh
Cpp/Binders/: CMakeLists.txt  FROLS.cpp  pyFROLS.cpp
Cpp/Data/: Bernoulli_SIR_MC_0.csv  Bernoulli_SIR_MC_1.csv  Bernoulli_SIR_MC_10.csv  Bernoulli_SIR_MC_100.csv  Bernoulli_SIR_MC_1000.csv  Bernoulli_SIR_MC_1001.csv  Bernoulli_SIR_MC_1002.csv  Bernoulli_SIR_MC_1003.csv  Bernoulli_SIR_MC_1004.csv  Bernoulli_SIR_MC_1005.csv  Bernoulli_SIR_MC_1006.csv  Bernoulli_SIR_MC_1007.csv  Bernoulli_SIR_MC_1008.csv  Bernoulli_SIR_MC_1009.csv  Bernoulli_SIR_MC_101.csv  Bernoulli_SIR_MC_1010.csv  Bernoulli_SIR_MC_1011.csv  Bernoulli_SIR_MC_1012.csv  Bernoulli_SIR_MC_1013.csv  Bernoulli_SIR_MC_1014.csv  Bernoulli_SIR_MC_1015.csv  Bernoulli_SIR_MC_1016.csv  Bernoulli_SIR_MC_1017.csv  Bernoulli_SIR_MC_1018.csv  Bernoulli_SIR_MC_1019.csv  Bernoulli_SIR_MC_102.csv  Bernoulli_SIR_MC_1020.csv  Bernoulli_SIR_MC_1021.csv  Bernoulli_SIR_MC_1022.csv  Bernoulli_SIR_MC_1023.csv  Bernoulli_SIR_MC_1024.csv  Bernoulli_SIR_MC_1025.csv  Bernoulli_SIR_MC_1026.csv  Bernoulli_SIR_MC_1027.csv  Bernoulli_SIR_MC_1028.csv  Bernoulli_SIR_MC_1029.csv  Bernoulli_SIR_MC_103.csv  Bernoulli_SIR_MC_1030.csv  Bernoulli_SIR_MC_1031.csv  Bernoulli_SIR_MC_1032.csv  (+1560 more)
Cpp/Executables/: CMakeLists.txt
Cpp/cmake/: HIP_Sycl_config.cmake  Intel_Sycl_config.cmake  Sycl_executable.cmake
Cpp/data/: Bernoulli_SIR_MC_0.csv  Bernoulli_SIR_MC_1.csv  Bernoulli_SIR_MC_10.csv  Bernoulli_SIR_MC_100.csv  Bernoulli_SIR_MC_1000.csv  Bernoulli_SIR_MC_1001.csv  Bernoulli_SIR_MC_1002.csv  Bernoulli_SIR_MC_1003.csv  Bernoulli_SIR_MC_1004.csv  Bernoulli_SIR_MC_1005.csv  Bernoulli_SIR_MC_1006.csv  Bernoulli_SIR_MC_1007.csv  Bernoulli_SIR_MC_1008.csv  Bernoulli_SIR_MC_1009.csv  Bernoulli_SIR_MC_101.csv  Bernoulli_SIR_MC_1010.csv  Bernoulli_SIR_MC_1011.csv  Bernoulli_SIR_MC_1012.csv  Bernoulli_SIR_MC_1013.csv  Bernoulli_SIR_MC_1014.csv  Bernoulli_SIR_MC_1015.csv  Bernoulli_SIR_MC_1016.csv  Bernoulli_SIR_MC_1017.csv  Bernoulli_SIR_MC_1018.csv  Bernoulli_SIR_MC_1019.csv  Bernoulli_SIR_MC_102.csv  Bernoulli_SIR_MC_1020.csv  Bernoulli_SIR_MC_1021.csv  Bernoulli_SIR_MC_1022.csv  Bernoulli_SIR_MC_1023.csv  Bernoulli_SIR_MC_1024.csv  Bernoulli_SIR_MC_1025.csv  Bernoulli_SIR_MC_1026.csv  Bernoulli_SIR_MC_1027.csv  Bernoulli_SIR_MC_1028.csv  Bernoulli_SIR_MC_1029.csv  Bernoulli_SIR_MC_103.csv  Bernoulli_SIR_MC_1030.csv  Bernoulli_SIR_MC_1031.csv  Bernoulli_SIR_MC_1032.csv  (+7960 more)
Cpp/include/: CMakeLists.txt  Data_Containers.hpp  FROLS.hpp  FROLS_Data.hpp  FROLS_Execution.hpp  FROLS_Path_Config.cpp  FROLS_Path_Config.cpp.in  FROLS_Path_Config.hpp  FROLS_Path_Config.hpp.in  FROLS_Thread.hpp  FROLS_Typedefs.hpp  FROLS_feature.hpp  FROLS_math.hpp  ParameterConfig.py  Path_Config.hpp  Path_Config.hpp.in  Typedefs.hpp
Cpp/log/: ERR_regressor.txt  feature_log.txt  quantile_regressor.txt  quantile_subproblem_variables.txt  regressor_log.txt
Cpp/scripts/: Bernoulli_SIR_MC_execution_range.sh  config.bat
Cpp/static/: CMakeLists.txt  FROLS_Algorithm.cpp  FROLS_Algorithm.hpp  FROLS_DataFrame.cpp  FROLS_DataFrame.hpp  FROLS_Eigen.cpp  FROLS_Eigen.hpp  (+6 more)
Executables/: CMakeLists.txt  Community_Inference.py  Community_Regression.cpp  Entropy.py  Entropy_Plot.py  Generate_Graphs.cpp  NMI_Plot.py  Optimization.cpp  Optimize_All_SBM_Graphs.py  Optimize_Single_SBM.py  Parallel_Inference_Sim.py  Regression_Plot.py  SBM_Infer_Simulate.py  SBM_Openloop.py  SBM_Optimization.py  SBM_Parallel_Simulate.py  SBM_Regression.cpp  Struct_inf.py  Structural_Inference.py  block_inference_plot.py  gpu_parallel_launch.sh  gpu_simulate_from_data.cpp  infer_simulate.py  large_graph_gen.cpp  multiple_parallel_SIR_Network.cpp  parallel_SIR_Network.cpp  planted_SIR_Network.cpp  planted_SIR_Simulation.cpp  simulate_from_data.cpp  single_SIR_Network.cpp  validate_from_data.cpp  weighted_entropy.py
all-pairs-shortest-paths/: CMakeLists.txt
executables/: Async_MC.cpp  CMakeLists.txt  Concurrent_MC.cpp  Database_Regression.cpp  Graph_Generation.cpp  Infection_Sampling.cpp  MC_Simulations.cpp  SBM_Regression.cpp  Sim_Param_Upsert.cpp  tom_executable.cpp
old_cmake/: CMakeLists.txt
source/: CMakeLists.txt  Community_Mappings.cpp  Complete_Graph.cpp  Graph.cpp  Graph_Types.cpp  source.cpp
src/: Buffer_Utils.cpp  CMakeLists.txt  Community_State.cpp  Dynamics.cpp  Graph.cpp  Individual_Buffers.cpp  Profiling.cpp  Regression.cpp  SBM_Generation.cpp  SBM_types.cpp  SBM_write.cpp  SIR_Dynamics.cpp  SIR_Infection_Sampling.cpp  SIR_SBM_Network.cpp  Sim_Dynamics.cpp  Simulation.cpp
test/: CMakeLists.txt  NMI.py  NMI_example.py  SIR_Metapopulation_Simulation.cpp  SIR_Simulation.cpp  a.out  accessor_offset.cpp  array_constraints.cpp  array_generic_example.cpp  bernoulli.cpp  bgl_concept.cpp  bitonic_sort.cpp  buffer_construction_time.cpp  bulk_test.cpp  c_codegen.ipynb  c_codegen.py  casadi_ex.cpp  collision.cpp  comb.cpp  complete_graph_idx.cpp  compute_units.cpp  database_dataframe.cpp  device_copy.cpp  device_info.cpp  distributions.cpp  drop_simulation_tables.cpp  dummy_kernels.cpp  edges_sort.cpp  eigen_0d.cpp  erdos_renyi_gen.cpp  erdos_renyi_gen_sycl.cpp  football.py  generator_buffer.cpp  gid.cpp  gpu_rng.cpp  graph.cpp  graph_merge_simulation.cpp  graph_test.cpp  infection_sampling_test.cpp  initialize.cpp  (+37 more)
tom/: CMakeLists.txt  tom_config.hpp.in  tom_executable.cpp
(+925 files in other folders)
