add_sycl_executable(parallel_SIR_Network)
target_link_libraries(parallel_SIR_Network PUBLIC Graph Simulation Profiling nlohmann_json::nlohmann_json)
add_sycl_executable(SBM_Regression)
target_link_libraries(SBM_Regression PUBLIC Static_RNG::Static_RNG TBB::tbb Eigen3::Eigen ortools::ortools Regression)

add_sycl_executable(simulate_from_data)
target_link_libraries(simulate_from_data PUBLIC Graph Simulation Profiling nlohmann_json::nlohmann_json)

add_sycl_executable(validate_from_data)
target_link_libraries(validate_from_data PUBLIC Graph Simulation Profiling nlohmann_json::nlohmann_json)
# add_sycl_executable_nodep(Optimization)
# target_link_libraries(Optimization PUBLIC nlohmann_json::nlohmann_json casadi)
add_sycl_executable(multiple_parallel_SIR_Network)
target_link_libraries(multiple_parallel_SIR_Network PUBLIC Graph Multiple_Simulation Profiling nlohmann_json::nlohmann_json)
