include(CTest)
function(add_custom_test source_name)
add_executable(${source_name} ${source_name}.cpp)
configure_default_target(${source_name})
add_test(NAME ${source_name} COMMAND ${source_name})
endfunction()

add_custom_test(comb)
add_custom_test(graph)
add_custom_test(collision)
add_custom_test(initialize)
add_custom_test(population_count)
add_custom_test(recover)
add_custom_test(bernoulli)
add_custom_test(state_copy)
add_custom_test(simulation_step)
