include(CTest)
function(add_custom_test source_name)
add_executable(${source_name} ${source_name}.cpp)
configure_default_target(${source_name})
add_test(NAME ${source_name} COMMAND ${source_name})
if(${SIR_SBM_USE_GPU})
target_compile_definitions(${source_name} PUBLIC SIR_SBM_USE_GPU)
target_compile_options(${source_name} PUBLIC "-fsycl-targets=nvptx64-nvidia-cuda")
target_link_options(${source_name} PUBLIC "-fsycl-targets=nvptx64-nvidia-cuda")
else()
target_compile_definitions(${source_name} PUBLIC SIR_SBM_USE_CPU)
target_compile_options(${source_name} PUBLIC "-fsycl-targets=spir64_x86_64")
target_link_options(${source_name} PUBLIC "-fsycl-targets=spir64_x86_64")
endif()
endfunction()

add_custom_test(comb)
add_custom_test(graph)
add_custom_test(collision)
add_custom_test(initialize)
add_custom_test(population_count)
add_custom_test(recover)
add_custom_test(bernoulli)
add_custom_test(state_copy)
add_custom_test(simulation_step)
add_custom_test(run_simulation)
