include(CTest)
function(add_custom_test source_name)
add_executable(${source_name} ${source_name}.cpp)
configure_default_target(${source_name})
add_test(NAME ${source_name} COMMAND ${source_name})
if(${SIR_SBM_USE_GPU})
target_compile_definitions(${source_name} PUBLIC SIR_SBM_USE_GPU)
target_compile_options(${source_name} PUBLIC "-fsycl-targets=nvptx64-nvidia-cuda")
target_link_options(${source_name} PUBLIC "-fsycl-targets=nvptx64-nvidia-cuda")
else()
target_compile_definitions(${source_name} PUBLIC SIR_SBM_USE_CPU)
target_compile_options(${source_name} PUBLIC "-fsycl-targets=spir64_x86_64")
target_link_options(${source_name} PUBLIC "-fsycl-targets=spir64_x86_64")
endif()
endfunction()
if(${SIR_SBM_USE_GPU})
message(STATUS "Building tests targeted for GPU")
else()
message(STATUS "Building tests targeted for CPU")
endif()
add_subdirectory(simulation)
# add_subdirectory(graph)
# add_subdirectory(epidemiological)
# add_subdirectory(buffer)

